[package]
name = "maidenhead"
version = "0.2.1"
edition = "2021"
authors = ["Olof Johansson <olof@lixom.net>"]
description = "A simple package to convert to/from maidenhead squares to latitude/longitude"
repository = "https://github.com/olofj/maidenhead"
license = "Apache-2.0"
keywords = ["hamradio"]
exclude = ["/.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
